Fix flickering opacity animations slightly differently

--- a/stylesheets/exercises-package/stacks.less
+++ b/stylesheets/exercises-package/stacks.less
@@ -2,10 +2,6 @@
 @import "../shared-package/variables.less";
 @import "stack-animations.less";
 
-body {
-    -webkit-transform: translate3d(0, 0, 0);
-}
-
 .stack {
     min-height: 100px;
     margin-bottom: 10px;
@@ -457,6 +453,9 @@ body {
 .exercises-header .practice-exercise-topic-context {
     .transition(opacity 0.1s ease-in-out);
     .opacity(30);
+
+    // See http://stackoverflow.com/questions/5814101/css3-transition-transform-translate3d-causes-severe-flicker
+    -webkit-backface-visibility: hidden;
 }
 .exercises-header .practice-exercise-topic-context.solid-hover:hover {
     .opacity(100);
